--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
